# support-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  requests.py
src/app/: dispatcher_builder.py  gather_routers.py  users_cleaner.py
src/app/admin/: handlers.py
src/app/bot/admin/: handlers.py
src/app/bot/filters/: __init__.py  in_chat.py  in_topic.py
src/app/bot/handlers/: callback.py  command.py  message.py  support.py
src/app/bot/middlewares/: __init__.py
src/app/bot/middlewares/outer/: __init__.py  anti_flood.py  (+1 more)
src/app/bot/utils/: keyboards.py
src/app/dispatcher_settings/: __init__.py  gather_routers.py  lifetime.py  logging_bot.py
src/app/filters/: __init__.py  admin_protection.py  auth_check.py  fail_command.py  in_chat.py  in_topic.py
src/app/handlers/: auth.py  callback.py  command.py  message.py  support.py
src/app/middlewares/: __init__.py
src/app/middlewares/outer/: __init__.py  anti_flood.py  authentication.py
src/app/utils/: keyboards.py  states.py  topics.py  topics_interactions.py
src/config/: loader.py  reader.py
src/config/construct_models/: __init__.py  bot_config.py  database_config.py
src/constants/: users.py
src/database/: __init__.py
src/database/controllers/: __init__.py  base.py  general.py  table.py
src/database/core/: __init__.py  annotations.py  base.py  session_factory.py
src/database/models/: users.py
src/database/services/: __init__.py  general.py
src/database/tables_managers/: base.py  table.py
src/database/types/: __init__.py  dto.py  generics.py  tables_params_dicts.py
