[tool.poetry]
package-mode = false
name = "support-bot"
version = "0.1.0"
authors = ["Georgiy Vasin <georgijvasin01@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
cachetools = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
